--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -32,4 +32,10 @@
   .icon-compass2:before {
     content: "\e94a";
   }
+
+  .icon-arrowDown:before {
+    content: "\e901";
+    color: #fff;
+    font-size: 9px;
+  }
   
