--- a/src/components/areas/areas.scss
+++ b/src/components/areas/areas.scss
@@ -1,5 +1,3 @@
-@import "../../style/variables.scss";
-
 .areas{
     &__overflow{
         margin-top: 10px;
@@ -20,11 +18,10 @@
     }
     &__caption{
         display: flex;
-        align-items : end;
+        align-items: flex-end;
         justify-content: space-between;
         padding-right: 20px;
     }
-
 }
 
 .areas__overflow::-webkit-scrollbar {
