--- a/src/components/areas/areas.scss
+++ b/src/components/areas/areas.scss
@@ -2,7 +2,7 @@
     &__overflow{
         margin-top: 10px;
         overflow: auto;
-        height: 500px;
+        height: 444px;
         padding-right: 5px;
         padding-bottom: 5px;
         box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
@@ -13,7 +13,7 @@
         max-width: 618px;
         grid-auto-flow: row;
         grid-template-columns: 1fr;
-        row-gap: 40px;
+        row-gap: 20px;
 
     }
     &__caption{
@@ -39,7 +39,7 @@
 
 .area{
     background: white;
-    padding: 22px 25px 22px;
+    padding: 20px 25px;
     border-radius: 10px;
     box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
 
@@ -96,7 +96,7 @@
     }
     &__links{
         grid-area: links;
-        margin-top: 17px;
+        margin-top: 10px;
         display: flex;
 /*         justify-content: end;
         align-self: end; */
