--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -22,6 +22,13 @@
         font-size: 18px;
         line-height: 22px;
     }
+    &_xs{
+        width: 160px;
+        height: 40px;        
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 22px;
+    }
     &_active{
         background-color: var(--main-color);
         border: none;
