--- a/src/components/postamatCard/postamatCard.scss
+++ b/src/components/postamatCard/postamatCard.scss
@@ -7,4 +7,7 @@
     height: 100px;
     box-shadow: 0px 0px 7px 2px rgba(0, 0, 0, 0.03);
     padding: 0 50px;
+    & > div{
+        width: 300px;
+    }
 }
