map modes switch

--- a/src/components/filtersForm/filtersForm.scss
+++ b/src/components/filtersForm/filtersForm.scss
@@ -2,7 +2,7 @@
 	margin-top: 25px;
 	display: flex;
 	justify-content: space-between;
-	align-items: end;
+	align-items: flex-end;
 	
 	&__item{
 		width: 168px;		
