--- a/src/components/filtersForm/filtersForm.scss
+++ b/src/components/filtersForm/filtersForm.scss
@@ -9,6 +9,10 @@
 	}
 	&__label{
 		margin-bottom: 5px;
+		font-weight: 500;
+        font-size: 15px;
+        line-height: 20px;
+        color: #676767;
 	}
 }
 
