--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -31,6 +31,26 @@
         line-height: 22px;
         background-color: inherit;
     }
+    &_form{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        width: 186px;
+        height: 39px;
+        border-radius: 7.69231px;
+        background: var(--main-color);
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 17px;
+        color: #FFFFFF;
+        border: none;
+        transition: 0.5s all;
+        &:active{
+            background-color: var(--border-color);
+        }
+    }
+
     &_active{
         background-color: var(--main-color);
         border: none;
@@ -39,3 +59,8 @@
         background-color: var(--main-color);
     }
 }
+
+
+
+
+
