--- a/src/components/map/mainMap.scss
+++ b/src/components/map/mainMap.scss
@@ -31,6 +31,13 @@
     }
 }
 
+.little_text{
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  color: #333333;
+}
+
 
 .toggle {
     --width: 126px;
