--- a/src/components/areas/areas.scss
+++ b/src/components/areas/areas.scss
@@ -78,10 +78,10 @@
         margin-left: 30px;
         display: flex;
         flex-direction: column;
+        justify-content: flex-start;
         border-left: var(--bg-color) 3px solid;
         padding-left: 22px;
-        gap: 15px;
-        justify-content: center;
+        gap: 20px;
     }
     &__result{
         display: flex;
