--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,7 +9,9 @@ header{
 
 .header{
     &__wrapper{
-        display: grid;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         padding-top: 5px;
     }
 
