--- a/src/components/loginForm/loginForm.scss
+++ b/src/components/loginForm/loginForm.scss
@@ -23,6 +23,9 @@
             border: 3px solid #F62E46;
         }
     }
+    &__button{
+        margin-top: 20px;
+    }
     input::placeholder{
         color: #9E9B98;
     }
