--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -60,5 +60,5 @@ body{
     grid-template-columns: 1fr 1fr;
     gap: 30px;
     padding: 40px 0 10px;
-    min-height: 710px;
+    height: 710px;
 }
