--- a/src/style/button.scss
+++ b/src/style/button.scss
@@ -31,6 +31,13 @@
         line-height: 22px;
         background-color: inherit;
     }
+    &_xxs{
+        width: 149.17px;
+        height: 39px;
+        border: 2.30769px solid #B5CAF6;
+        border-radius: 7.69231px;
+        font-size: 14px;
+    }
     &_form{
         display: flex;
         align-items: center;
