--- a/src/components/postamatsLists/postamatsList.scss
+++ b/src/components/postamatsLists/postamatsList.scss
@@ -6,7 +6,6 @@
         gap: 20px;
     }
     &__title{
-        margin-top: 60px;
 		font-weight: 500;
 		font-size: 16px;
 		line-height: 19px;
@@ -38,7 +37,7 @@
         box-shadow: 0px -6px 31px rgba(0, 0, 0, 0.1);
         &-wrapper{
             display: grid;
-            grid-template-columns: 1fr 2fr 1fr;
+            grid-template-columns: 0.5fr 0.7fr 1fr;
             align-items: center;
         }
     }
@@ -52,6 +51,20 @@
         display: flex;
         justify-content: space-between;
         align-self: start;
+    }
+    &__reset{
+        justify-self: end;
+    }
+    &__old{
+        margin-top: 30px;
+    }
+    &__header{
+        display: flex;
+        justify-content: space-between;
+        align-items:flex-end;
+    }
+    &__hide{
+        cursor: pointer;
     }
 }
 
