--- a/src/components/postamatsLists/postamatsList.scss
+++ b/src/components/postamatsLists/postamatsList.scss
@@ -55,6 +55,9 @@
     &__reset{
         justify-self: end;
     }
+    &__new{
+        margin-top: 60px;
+    }
     &__old{
         margin-top: 30px;
     }
