--- a/src/style/text.scss
+++ b/src/style/text.scss
@@ -11,7 +11,12 @@
         line-height: 22px;
         color: #000000;
     }
-
+    &_legend{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 19px;
+        color: #000000;
+    }
     &_color_accent{
         color: var(--main-color);
     }
